# xcraft

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  skipfile.txt  todo.txt
.github/workflows/: build.yml
cmake/: fetch_deps.cmake  xcraftConfig.cmake.in
examples/: bof_local.cpp  bof_remote.cpp  ret2libc.cpp  rop.cpp  rop.py  shellcode.cpp  vuln.c
include/ctf/: binary.hpp  context.hpp  ctf.hpp  elf.hpp  enums.hpp  macho.hpp  pe.hpp  rop.hpp  shellcraft.hpp  tube.hpp  utils.hpp
include/xcraft/: binary.hpp  context.hpp  elf.hpp  enums.hpp  macho.hpp  pe.hpp  rop.hpp  shellcraft.hpp  tube.hpp  utils.hpp
src/: bin_utils.cpp  bin_utils.hpp  binary.cpp  context.cpp  elf.cpp  llvm_object_utils.cpp  llvm_object_utils.hpp  macho.cpp  pe.cpp  rop.cpp  shellcraft.cpp  tube.cpp  utils.cpp
tests/: elf.cpp  proc.cpp  rop.cpp  shellcraft.cpp  utils.cpp
